--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,11 @@ android {
     }
     productFlavors {
     }
+    externalNativeBuild {
+        ndkBuild {
+            path file('src/main/cpp/tunet-c/jni/Android.mk')
+        }
+    }
 }
 
 dependencies {
@@ -26,10 +31,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0-alpha01'
-    implementation 'com.github.LiquidPlayer:LiquidCore:0.6.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.2-alpha01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.2-alpha01'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
 }
