--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "app/src/main/cpp/tunet-c"]
 	path = app/src/main/cpp/tunet-c
 	url = https://github.com/robertying/tunet-c.git
+[submodule "app/src/main/cpp/openssl-curl-android"]
+	path = app/src/main/cpp/openssl-curl-android
+	url = https://github.com/robertying/openssl-curl-android.git
