--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,15 @@ buildscript {
     repositories {
         google()
         jcenter()
-
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'io.fabric.tools:gradle:1.26.1'
     }
 }
 
@@ -15,6 +19,9 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://maven.google.com/'
+        }
     }
 }
 
