--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,15 @@ android:
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
+  licenses:
+    - android-sdk-license-.+
+    - ".+"
+before_install:
+  - openssl aes-256-cbc -K $encrypted_dd2221beaadf_key -iv $encrypted_dd2221beaadf_iv
+    -in app/google-services.json.enc -out app/google-services.json -d
 install:
+  - echo y | sdkmanager "ndk-bundle"
+  - gem install bundler
   - bundle install
 script:
-  - fastlane beta
+  - bundle exec fastlane beta
