--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
   licenses:
+    - android-sdk-license
     - android-sdk-license-.+
     - ".+"
 before_install:
