--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,26 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
 android {
+    def CI = System.getenv("CI") == "true"
+
+    signingConfigs {
+        if (CI) {
+            release {
+                storeFile file("local.keystore")
+                storePassword System.getenv("RELEASE_STORE_PASSWORD")
+                keyAlias System.getenv("RELEASE_KEY_ALIAS")
+                keyPassword System.getenv("RELEASE_KEY_PASSWORD")
+            }
+        } else {
+            release {
+                storeFile file(RELEASE_STORE_FILE)
+                storePassword RELEASE_STORE_PASSWORD
+                keyAlias RELEASE_KEY_ALIAS
+                keyPassword RELEASE_KEY_PASSWORD
+            }
+        }
+    }
+
     compileSdkVersion 28
 
     defaultConfig {
@@ -18,6 +38,7 @@ android {
             shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 
@@ -28,7 +49,10 @@ android {
     }
 }
 
+preBuild.dependsOn ":htmltidy:build"
+
 dependencies {
+    implementation project(':htmltidy')
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
     implementation 'com.google.android.material:material:1.1.0-alpha04'
