--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,9 @@ android:
   licenses:
     - android-sdk-license-.+
 before_install:
-  - openssl aes-256-cbc -K $encrypted_dd2221beaadf_key -iv $encrypted_dd2221beaadf_iv
-    -in app/google-services.json.enc -out app/google-services.json -d
   - openssl aes-256-cbc -K $encrypted_760efcc15f1f_key -iv $encrypted_760efcc15f1f_iv
-    -in .env.default.enc -out .env.default -d
-  - openssl aes-256-cbc -K $encrypted_760efcc15f1f_key -iv $encrypted_760efcc15f1f_iv
-    -in local.keystore.enc -out local.keystore -d
+    -in secrets.tar.gz.enc -out secrets.tar.gz -d
+  - tar xvf secrets.tar.gz
 install:
   - echo y | sdkmanager "ndk-bundle"
   - gem install bundler
