--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,38 @@
 language: android
+
 android:
   components:
     - tools
     - platform-tools
-    - build-tools-28.0.3
-    - android-28
+    - tools
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
   licenses:
     - android-sdk-license-.+
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+    - $HOME/.android/build-cache
+
 before_install:
   - openssl aes-256-cbc -K $encrypted_760efcc15f1f_key -iv $encrypted_760efcc15f1f_iv
     -in secrets.tar.gz.enc -out secrets.tar.gz -d
   - tar xvf secrets.tar.gz
+
 install:
+  - touch $HOME/.android/repositories.cfg
+  - echo y | sdkmanager "platforms;android-28"
+  - echo y | sdkmanager "build-tools;28.0.3"
   - echo y | sdkmanager "ndk-bundle"
   - gem install bundler
   - bundle install
+
 script:
-  - bundle exec fastlane beta
+  - bash scripts/build.sh
