--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,28 @@ android {
 
     compileSdkVersion 28
 
-    defaultConfig {
-        applicationId "io.robertying.campusnet"
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    def versionPropsFile = file('../version.properties')
+
+    if (versionPropsFile.canRead()) {
+        def Properties versionProps = new Properties()
+
+        versionProps.load(new FileInputStream(versionPropsFile))
+
+        def code = versionProps['VERSION_CODE'].toInteger() + 1
+
+        versionProps['VERSION_CODE'] = code.toString()
+        versionProps.store(versionPropsFile.newWriter(), null)
+
+        defaultConfig {
+            applicationId "io.robertying.campusnet"
+            minSdkVersion 21
+            targetSdkVersion 28
+            versionCode code
+            versionName "1.0.0"
+            testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        }
+    } else {
+        throw new FileNotFoundException("Could not read version.properties")
     }
 
     buildTypes {
