--- a/htmltidy/build.gradle
+++ b/htmltidy/build.gradle
@@ -7,7 +7,13 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
+
+        externalNativeBuild {
+            cmake {
+                arguments "-DBUILD_SHARED_LIB:BOOL=OFF"
+            }
+        }
     }
 
     externalNativeBuild {
