--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 git:
-  depth: 3
+  depth: 2
 language: android
 android:
   components:
@@ -20,7 +20,7 @@ cache:
 before_install:
   - openssl aes-256-cbc -K $encrypted_760efcc15f1f_key -iv $encrypted_760efcc15f1f_iv
     -in secrets.tar.gz.enc -out secrets.tar.gz -d
-  - tar zxf secrets.tar.gz
+  - tar xf secrets.tar.gz
 install:
   - touch $HOME/.android/repositories.cfg
   - echo y | sdkmanager "platforms;android-28"
