--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
 script:
   - bash scripts/build.sh
 before_deploy:
-  - mv app/release/app-release.apk CampusNet-$TRAVIS_TAG.apk
+  - mv app/build/outputs/apk/release/app-release.apk CampusNet-$TRAVIS_TAG.apk
 deploy:
   provider: releases
   api_key:
